--- a/package/crds/redis.gcp.upbound.io_instances.yaml
+++ b/package/crds/redis.gcp.upbound.io_instances.yaml
@@ -1753,6 +1753,15 @@ spec:
                       "auto". For PRIVATE_SERVICE_ACCESS mode value must be the name of an allocated address
                       range associated with the private service access connection, or "auto".
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_key_value}.
+                    type: object
+                    x-kubernetes-map-type: granular
                   tier:
                     description: 'The service tier of the instance. Must be one of
                       these values:'
@@ -2102,6 +2111,15 @@ spec:
                       "auto". For PRIVATE_SERVICE_ACCESS mode value must be the name of an allocated address
                       range associated with the private service access connection, or "auto".
                     type: string
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_key_value}.
+                    type: object
+                    x-kubernetes-map-type: granular
                   tier:
                     description: 'The service tier of the instance. Must be one of
                       these values:'
@@ -2626,6 +2644,15 @@ spec:
                           type: string
                       type: object
                     type: array
+                  tags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      A map of resource manager tags.
+                      Resource manager tag keys and values have the same definition as resource manager tags.
+                      Keys must be in the format tagKeys/{tag_key_id}, and values are in the format tagValues/{tag_key_value}.
+                    type: object
+                    x-kubernetes-map-type: granular
                   terraformLabels:
                     additionalProperties:
                       type: string
