secretmanager: multiple changes

--- a/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
+++ b/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
@@ -106,6 +106,15 @@ spec:
                     - name
                     - namespace
                     type: object
+                  secretDataWo:
+                    description: |-
+                      The secret data. Must be no larger than 64KiB. For more info see updating write-only attributes
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  secretDataWoVersion:
+                    description: Triggers update of secret data write-only. For more
+                      info see updating write-only attributes
+                    type: number
                   secretRef:
                     description: Reference to a Secret in secretmanager to populate
                       secret.
@@ -229,6 +238,15 @@ spec:
                     - name
                     - namespace
                     type: object
+                  secretDataWo:
+                    description: |-
+                      The secret data. Must be no larger than 64KiB. For more info see updating write-only attributes
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  secretDataWoVersion:
+                    description: Triggers update of secret data write-only. For more
+                      info see updating write-only attributes
+                    type: number
                   secretRef:
                     description: Reference to a Secret in secretmanager to populate
                       secret.
@@ -305,8 +323,6 @@ spec:
                             type: string
                         type: object
                     type: object
-                required:
-                - secretDataSecretRef
                 type: object
               managementPolicies:
                 default:
@@ -475,10 +491,6 @@ spec:
             required:
             - forProvider
             type: object
-            x-kubernetes-validations:
-            - message: spec.forProvider.secretDataSecretRef is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.secretDataSecretRef)'
           status:
             description: SecretVersionStatus defines the observed state of SecretVersion.
             properties:
@@ -515,6 +527,15 @@ spec:
                   secret:
                     description: Secret Manager secret resource
                     type: string
+                  secretDataWo:
+                    description: |-
+                      The secret data. Must be no larger than 64KiB. For more info see updating write-only attributes
+                      Note: This property is write-only and will not be read from the API.
+                    type: string
+                  secretDataWoVersion:
+                    description: Triggers update of secret data write-only. For more
+                      info see updating write-only attributes
+                    type: number
                   version:
                     description: The version of the Secret.
                     type: string
