spanner: updated descriptions

--- a/package/crds/spanner.gcp.upbound.io_databases.yaml
+++ b/package/crds/spanner.gcp.upbound.io_databases.yaml
@@ -624,10 +624,12 @@ spec:
                     type: string
                   ddl:
                     description: |-
-                      An optional list of DDL statements to run inside the newly created
-                      database. Statements can create tables, indexes, etc. These statements
-                      execute atomically with the creation of the database: if there is an
-                      error in any statement, the database is not created.
+                      An optional list of DDL statements to run inside the database. Statements can create
+                      tables, indexes, etc.
+                      During creation these statements execute atomically with the creation of the database
+                      and if there is an error in any statement, the database is not created. Limited updates to this field are supported, and
+                      newly appended DDL statements can be executed in an update. However, modifications
+                      to prior statements will create a plan that marks the resource for recreation.
                     items:
                       type: string
                     type: array
@@ -768,10 +770,12 @@ spec:
                     type: string
                   ddl:
                     description: |-
-                      An optional list of DDL statements to run inside the newly created
-                      database. Statements can create tables, indexes, etc. These statements
-                      execute atomically with the creation of the database: if there is an
-                      error in any statement, the database is not created.
+                      An optional list of DDL statements to run inside the database. Statements can create
+                      tables, indexes, etc.
+                      During creation these statements execute atomically with the creation of the database
+                      and if there is an error in any statement, the database is not created. Limited updates to this field are supported, and
+                      newly appended DDL statements can be executed in an update. However, modifications
+                      to prior statements will create a plan that marks the resource for recreation.
                     items:
                       type: string
                     type: array
@@ -994,10 +998,12 @@ spec:
                     type: string
                   ddl:
                     description: |-
-                      An optional list of DDL statements to run inside the newly created
-                      database. Statements can create tables, indexes, etc. These statements
-                      execute atomically with the creation of the database: if there is an
-                      error in any statement, the database is not created.
+                      An optional list of DDL statements to run inside the database. Statements can create
+                      tables, indexes, etc.
+                      During creation these statements execute atomically with the creation of the database
+                      and if there is an error in any statement, the database is not created. Limited updates to this field are supported, and
+                      newly appended DDL statements can be executed in an update. However, modifications
+                      to prior statements will create a plan that marks the resource for recreation.
                     items:
                       type: string
                     type: array
